k8s/management/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: management
  annotations:
    traefik.ingress.kubernets.io/router.entrypoints: web
spec:
  rules:
  - host: kuma.mdstorage.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma-service
            port:
              number: 80
